[package]
name = "sled-typed"
version = "0.1.0"
authors = ["Christian Authmann"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.60"
zerocopy = "0.3.0"
byteorder = "1.3.4"